# flash-inference

./: .gitignore  README.md  pyproject.toml
profiles/: kv_decode_nsys.nsys-rep  kv_decode_short.sqlite
results/: sweep_series.jsonl  sweep_summary.csv
src/model/: attention.py  config.py  layernorm.py  mlp.py  transformer.py
src/runtime/: generate.py  generate_baseline.py  generate_kv.py  inference.py  kv_cache.py
src/scripts/: bench_sweep.py  kv_vs_baseline.py  plot_results.py  profile_decode.py  profile_kv_decode_nsys.py  profile_kv_decode_torch.py  run_baseline.py  run_baseline_kvcache.py  run_generate.py  run_kv.py
tests/: test_kv_cache.py  test_model.py
